# health-agents-collective

./: .env.example  .gitignore  .pre-commit-config.yaml  Agent2Agent_Protocol.md  CLAUDE.md  README.md  TASKS.md  app.py  prd.md  pyproject.toml  test_fix.py
.claude/agents/: a2a-protocol-advisor.md
src/agents/common/: agent.py  agent_executor.py  server.py  tool_client.py
src/agents/fhir_agent/: agent.py  agent_card.py  search_planner.py
src/agents/orchestration_agent/: __init__.py  agent.py  agent_card.py  models.py
src/agents/triage_agent/: __init__.py  agent.py  agent_card.py  models.py
src/core/: __init__.py  config.py
src/mcp_handler/: fhir_mcp.py  fhir_mcp_main.py  mcp_fhir.py  mcp_triage.py  triage_mcp_server.py
